# imGUI_tests

./: .clang-format  CMakeLists.txt  CameraNameTest.cpp  GUID_tools.cpp  GUID_tools.h  LICENSE  README.md  RETURNCODES.md  imgui.ini  main.cpp  testcam.cpp  webcam.cpp  webcam.h  webcam_manager.cpp  webcam_manager.h  works.cpp
hardware/: device_manager.cpp  device_manager.h
hardware/webcam/: webcam.cpp  webcam.h
